--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>boringloop</title>
 </head>
 <body>
-    <p>Hello, boringloop!</p>
+    <div style="margin: 0 auto; width: 1200px;">
+        <p>Hello, boringloop!</p>
+        <img src="assets/banner.png" alt="boring">
+    </div>
 </body>
 </html>
