--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/LineIcons.css">
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -114,7 +114,7 @@
                                 </div>
                                 <!-- Buttons -->
                                 <div class="hero-btns">
-                                    <a href="https://exchange.pancakeswap.finance/#/swap" class="btn btn-white ml-2">
+                                    <a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="btn btn-white ml-2">
                                         <span>Pancake Swap</span>
                                     </a>
                                 </div>
